services/fd-tagging-tool/src/test/resources/valid/PossibleConfiguration/PossibleConfiguration.mt
package valid.PossibleConfiguration;

component PossibleConfiguration {
  Source source;
  Sink sink;

  source.value -> sink.value;
}