services/fd-tagging-tool/src/test/resources/invalid/NoFeaturePresent/NoFeaturePresent.mt
package invalid.NoFeaturePresent;

component NoFeaturePresent {
  Source source;
  Sink sink;

  source.value -> sink.value;
}